# Advent-of-Code

./: .env  12.js  2.js  4.js  5.js  7.js  9.js  fetchInput.js  package-lock.json  package.json  utils.js
2022/: .gitignore  package-lock.json
2022/output/: 14.html  23.html
2022/solution/: 14.js  16.js  18.js  20.js  22.js  23.js  6.js  8.js  _solutionTemplate.js
2023/: .env.example  .gitignore  aoc2023.opam  dune-project  getInput.ts
Advent of Typescript/2023/: 17.ts  18.ts  19.ts  20.ts  21.ts  22.ts  23.ts  24.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
output/: 12.txt  22.html  23.html
solution/: 1.js  10.js  11.js  12.js  13.js  15.js  16.js  17.js  19.js  21.js  22.js  24.js  25.js  3.js  _solutionTemplate.js
